Fix for scrollbars

--- a/src/components/views/TorpedoLoading/style.scss
+++ b/src/components/views/TorpedoLoading/style.scss
@@ -8,7 +8,7 @@
   .torpedoPickScroll {
     width: 100%;
     overflow-x: scroll;
-    -webkit-mask-image: linear-gradient(to right, transparent 0%,#fff 5%,#fff 95%,transparent 100%)
+    -webkit-mask-image: linear-gradient(to right, transparent 0%,#fff 5%,#fff 95%,transparent 100%);
   }
   .torpedoHolder {
     width: 66px;
@@ -54,4 +54,19 @@
       }
     }
   }
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.5);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
